--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
 	</dependency>
+	<!-- activation for javamail -->
+	<dependency>
+		<groupId>javax.activation</groupId>
+	    <artifactId>activation</artifactId>
+	    <version>1.1.1</version>
+	</dependency>
 </dependencies>
   
 	<dependencyManagement>
