--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
   <artifactId>mJamsek</artifactId>
   <version>1.0</version>
   <name>Simple server</name>
+  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
 <dependencies>
 	<!-- JavaSpark -->
